; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-replace-var.c_main.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-replace-var.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [54 x i8] c"@@@foobar@xyz@HALLO@foobar@test@@testtest@TEST@...@@@\00", align 1
@lookup = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [62 x i8] c"@@@foobar@xyz<<<HALLO>>>foobar@test@@testtest<<<TEST>>>...@@@\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"XYZFFFFXYZFFFFXYZ\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"XYZ\00", align 1
@.str.4 = private unnamed_addr constant [4 x i8] c"ABC\00", align 1
@.str.5 = private unnamed_addr constant [18 x i8] c"ABCFFFFABCFFFFABC\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %7 = load i32, i32* @lookup, align 4
  %8 = call i8* @replace_var(i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str, i64 0, i64 0), i32 %7, i32* null)
  store i8* %8, i8** %6, align 8
  %9 = call i32 @assert_se(i8* %8)
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @puts(i8* %10)
  %12 = load i8*, i8** %6, align 8
  %13 = call i8* @streq(i8* %12, i8* getelementptr inbounds ([62 x i8], [62 x i8]* @.str.1, i64 0, i64 0))
  %14 = call i32 @assert_se(i8* %13)
  %15 = load i8*, i8** %6, align 8
  %16 = call i32 @free(i8* %15)
  %17 = call i8* @strreplace(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.4, i64 0, i64 0))
  store i8* %17, i8** %6, align 8
  %18 = call i32 @assert_se(i8* %17)
  %19 = load i8*, i8** %6, align 8
  %20 = call i32 @puts(i8* %19)
  %21 = load i8*, i8** %6, align 8
  %22 = call i8* @streq(i8* %21, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.5, i64 0, i64 0))
  %23 = call i32 @assert_se(i8* %22)
  %24 = load i8*, i8** %6, align 8
  %25 = call i32 @free(i8* %24)
  ret i32 0
}

declare dso_local i32 @assert_se(i8*) #1

declare dso_local i8* @replace_var(i8*, i32, i32*) #1

declare dso_local i32 @puts(i8*) #1

declare dso_local i8* @streq(i8*, i8*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i8* @strreplace(i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
